force-app/main/default/objects/Litmos__Scenario_Field_Mapping__c/Litmos__Scenario_Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>Scenario Field Mapping</label>
    <nameField>
        <label>Scenario Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenario Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>