force-app/main/default/objects/Litmos__Scenario_Field_Mapping__c/fields/Litmos__Assignment_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Assignment_Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment Scenario</label>
    <referenceTo>Litmos__Assignment_Scenario__c</referenceTo>
    <relationshipLabel>Scenario Field Mappings</relationshipLabel>
    <relationshipName>Scenario_Field_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>