force-app/main/default/objects/Litmos__Scenario_Field_Mapping__c/fields/Litmos__Course__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Litmos__Program__c.Litmos__LitmosID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Litmos__Program__c</referenceTo>
    <relationshipLabel>Scenario Field Mappings</relationshipLabel>
    <relationshipName>Scenario_Field_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>