force-app/main/default/objects/Litmos__Scenario_Field_Mapping__c/fields/Litmos__FieldValue__c.field-meta.xml
<CustomField>
    <fullName>Litmos__FieldValue__c</fullName>
    <label>FieldValue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>