force-app/main/default/objects/Litmos__Scenario_Field_Mapping__c/fields/Litmos__RecordAssignment__c.field-meta.xml
<CustomField>
    <fullName>Litmos__RecordAssignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Assignment</label>
    <referenceTo>Litmos__Record_Assignment__c</referenceTo>
    <relationshipLabel>Scenario Field Mappings</relationshipLabel>
    <relationshipName>Scenario_Field_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>