force-app/main/default/objects/Litmos__Scenario_Field_Mapping__c/fields/Litmos__RecordObjectField__c.field-meta.xml
<CustomField>
    <fullName>Litmos__RecordObjectField__c</fullName>
    <label>RecordObjectField</label>
    <length>100</length>
    <type>Text</type>
</CustomField>